<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_semibold"
        android:text="@string/limit"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya"
        android:text="@string/for_your_calls"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".80"
            android:hint="@string/limit_talk_for"
            android:paddingEnd="4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="?attr/materialIconButtonFilledStyle"
            app:iconGravity="textStart"
            android:id="@+id/set_time_limit_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:insetBottom="0dp"
            app:icon="@drawable/timer_24px"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            app:iconPadding="0dp"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_limit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="5dp"
        android:text="@string/set_limit" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/select_contact_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_from_contacts" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:id="@+id/saved_limits_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp" />

    </ScrollView>

</LinearLayout>